--- a/Cards Against Humanity/Base.lproj/Main.storyboard
+++ b/Cards Against Humanity/Base.lproj/Main.storyboard
@@ -16,37 +16,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fzZ-RZ-1o1" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fzZ-RZ-1o1" customClass="BlackCardView">
                                 <rect key="frame" x="132" y="38" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nU6-A8-XsM" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nU6-A8-XsM" customClass="BlackCardView">
                                 <rect key="frame" x="229" y="38" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B1e-dP-vtu" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B1e-dP-vtu" customClass="BlackCardView">
                                 <rect key="frame" x="327" y="196" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0td-GI-AbC" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0td-GI-AbC" customClass="BlackCardView">
                                 <rect key="frame" x="425" y="196" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wr5-hz-a2d" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wr5-hz-a2d" customClass="BlackCardView">
                                 <rect key="frame" x="523" y="196" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tJZ-AG-qQh" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tJZ-AG-qQh" customClass="BlackCardView">
                                 <rect key="frame" x="327" y="38" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zJI-1O-3aL" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zJI-1O-3aL" customClass="BlackCardView">
                                 <rect key="frame" x="523" y="38" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pTb-ev-9VL" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pTb-ev-9VL" customClass="BlackCardView">
                                 <rect key="frame" x="131" y="196" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F4I-pk-q4U" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F4I-pk-q4U" customClass="BlackCardView">
                                 <rect key="frame" x="229" y="196" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h68-UR-YLe" customClass="WhiteCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h68-UR-YLe" customClass="WhiteCardView">
                                 <rect key="frame" x="16" y="117" width="90" height="130"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ncJ-SC-e5O" customClass="BlackCardView">
+                            <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ncJ-SC-e5O" customClass="BlackCardView">
                                 <rect key="frame" x="425" y="38" width="90" height="130"/>
                             </view>
                         </subviews>
